# vercel-example

./: pyproject.toml  requirements.txt
api/: api.py
