[tool.poetry]
name = "vercel-example"
version = "0.1.0"
description = ""
authors = ["hugo <hugo.cavan2386@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
